@@ -474,7 +474,6 @@
   <block id="e4358de2a09588cec13214adc031a6e1" category="sidebar">Início rápido para migração para o Amazon EVS</block>
   <block id="b217f7353b9ad5ed58a9d5b9ee531f78" category="sidebar">Migrar para o Amazon Elastic VMware Service</block>
   <block id="424013c53fd9187a66e051bb44ddaa34" category="doc">Suporte aprimorado do consultor de migração para o Amazon Elastic VMWare Service</block>
-  <block id="37ac2db5bb5bc7f50e3b58bbb706b64b" category="paragraph">O consultor de migração do Amazon Elastic VMware Service agora oferece suporte à implantação e montagem automáticas do seu sistema de arquivos Amazon FSx for NetApp ONTAP .  Isso permite que você comece a implantar suas VMs no FSx para sistemas de arquivos ONTAP quando a migração para o ambiente Amazon EVS estiver concluída.</block>
   <block id="93c34ab13f70b21f6935de45dacb9ae3" category="section-title">Calcule a economia de custos da migração para o Amazon Elastic VMware Service</block>
   <block id="b1da4fce8da5117e3a9e1041d1749074" category="paragraph">Agora você pode explorar as possíveis economias ao migrar suas cargas de trabalho do VMware para o Amazon Elastic VMware Service (EVS).  A calculadora de economia permite que você compare os custos de uso do Amazon EVS com e sem o Amazon FSx for NetApp ONTAP como armazenamento subjacente.  A calculadora exibe potenciais economias em tempo real à medida que você ajusta as características do seu ambiente.</block>
   <block id="89737fdc47d2ffa6f11712bb340e2a19" category="summary">Calcule quanto você pode economizar usando o Amazon EVS com FSx para ONTAP.</block>
@@ -512,12 +511,10 @@
   <block id="9d310bdb300e7bb1ef7cd5e2fc08e57b" category="paragraph">Esta versão do BlueXP Workload Factory para VMware apresenta diversas melhorias na experiência do consultor de migração do Amazon EC2:</block>
   <block id="28ac5ecdafc5d6be71f28783b5d53cc6" category="paragraph">Esta versão do BlueXP Workload Factory para VMware apresenta a seguinte melhoria na experiência do consultor de migração do Amazon EC2:</block>
   <block id="962abee1b74c5d5ab5f9bd0c47cbb068" category="paragraph">A interface do usuário e a documentação do Workload Factory agora usam "somente leitura" para se referir às permissões de leitura e "leitura/gravação" para se referir às permissões de automação.</block>
-  <block id="50d3ff7077038387799b7b34d964df08" category="paragraph">O BlueXP Workload Factory para VMware agora oferece suporte ao Amazon Elastic VMware Service.  Você pode migrar rapidamente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service usando o consultor de migração, otimizando custos e permitindo mais controle sobre seu ambiente VMware sem precisar refatorar ou reestruturar seus aplicativos.</block>
   <block id="041a7335d4bfbe01ea8a2d2f780732b6" category="inline-link">Explore as economias do Amazon Elastic VMware Service com o BlueXP Workload Factory</block>
   <block id="1a1b8cfea3181a2937851fe76b4862d4" category="paragraph"><block ref="1a1b8cfea3181a2937851fe76b4862d4" category="inline-link-rx"></block></block>
   <block id="2bbead322f2dd5c4a40fbd66537e304f" category="doc">BlueXP workload factory agora NetApp Workload Factory</block>
   <block id="9c80606adc6065bc48c6d99fbb8c3f1d" category="paragraph">O BlueXP foi renomeado e redesenhado para refletir melhor o papel que ele tem no gerenciamento da sua infraestrutura de dados. Como resultado, a BlueXP workload factory foi renomeada para NetApp Workload Factory.</block>
-  <block id="b77ed2f5662201a26b98b92e98329049" category="section-title">Apresentando o Centro de Planejamento de Cargas de Trabalho da VMware</block>
   <block id="2dd03fc740a72e1c5fc0daf9be122249" category="paragraph">O centro de planejamento de cargas de trabalho da VMware permite que você visualize e gerencie seu inventário de VMs e planos de migração em um só lugar.  Você pode carregar e salvar vários inventários de VMs de diferentes ambientes e começar a planejar uma migração para o serviço AWS EC2 ou Amazon Elastic VMware para qualquer um deles.  Você também pode criar e salvar planos de migração do AWS EC2 ou EVS.</block>
   <block id="420ac911d98022d5289d3f00ff38ea84" category="inline-link">Explore o centro de planejamento de cargas de trabalho da VMware</block>
   <block id="81ee9955f68100a5e460b3f794e65e9b" category="paragraph"><block ref="81ee9955f68100a5e460b3f794e65e9b" category="inline-link-rx"></block></block>
@@ -733,4 +730,9 @@
   <block id="3c031b939f6ec312ee601d021e7a6644" category="sidebar">Console NetApp</block>
   <block id="cc58d3a9b2264c4fd8cb1d3f61b90bdc" category="sidebar">Serviços de dados NetApp</block>
   <block id="93ba13882942e9f41461a4867481e012" category="sidebar">Use o centro de planejamento da VMware</block>
+  <block id="98d4c7385c3e640287a91e3032b576c3" category="paragraph">O BlueXP Workload Factory para VMware agora oferece suporte ao Amazon Elastic VMware Service. Você pode migrar manualmente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service, otimizando custos e permitindo mais controle sobre seu ambiente VMware sem precisar refatorar ou reestruturar seus aplicativos.</block>
+  <block id="dcf522fe0928ea448e17a8ccb7b14d76" category="paragraph">O NetApp Workload Factory agora oferece suporte à implantação e montagem automáticas do seu sistema de arquivos Amazon FSx for NetApp ONTAP .  Isso permite que você comece a implantar suas VMs no FSx para sistemas de arquivos ONTAP quando a migração para o ambiente Amazon EVS estiver concluída.</block>
+  <block id="74f9db7fefcf8c24332761c003d46a02" category="section-title">Apresentando o centro de planejamento de cargas de trabalho da VMware</block>
+  <block id="c1ed477ef5d58aa5d9931821badda717" category="paragraph">O BlueXP Workload Factory para VMware agora permite que você use o consultor de migração do Amazon Elastic VMware Service para migrar rapidamente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service.  Depois de criar um plano de migração usando o consultor de migração, ele é salvo automaticamente na lista de planos de migração no centro de planejamento.</block>
+  <block id="c2ec0e17d82dd73344c2ef80a6de22f1" category="paragraph"><block ref="c2ec0e17d82dd73344c2ef80a6de22f1" category="inline-link-rx"></block></block>
 </blocks>
