@@ -25,11 +25,19 @@ O BlueXP foi renomeado e redesenhado para refletir melhor o papel que ele tem no
 
 
 
-=== Apresentando o Centro de Planejamento de Cargas de Trabalho da VMware
+=== Apresentando o centro de planejamento de cargas de trabalho da VMware
 
 O centro de planejamento de cargas de trabalho da VMware permite que você visualize e gerencie seu inventário de VMs e planos de migração em um só lugar.  Você pode carregar e salvar vários inventários de VMs de diferentes ambientes e começar a planejar uma migração para o serviço AWS EC2 ou Amazon Elastic VMware para qualquer um deles.  Você também pode criar e salvar planos de migração do AWS EC2 ou EVS.
 
 https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["Explore o centro de planejamento de cargas de trabalho da VMware"]
+
+
+
+=== Apresentando o suporte do consultor de migração para o Amazon Elastic VMWare Service
+
+O BlueXP Workload Factory para VMware agora permite que você use o consultor de migração do Amazon Elastic VMware Service para migrar rapidamente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service.  Depois de criar um plano de migração usando o consultor de migração, ele é salvo automaticamente na lista de planos de migração no centro de planejamento.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs.html["Crie um plano de implantação para o Amazon EVS usando o consultor de migração"]
 
 
 
@@ -39,7 +47,7 @@ https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["Expl
 
 === Suporte aprimorado do consultor de migração para o Amazon Elastic VMWare Service
 
-O consultor de migração do Amazon Elastic VMware Service agora oferece suporte à implantação e montagem automáticas do seu sistema de arquivos Amazon FSx for NetApp ONTAP .  Isso permite que você comece a implantar suas VMs no FSx para sistemas de arquivos ONTAP quando a migração para o ambiente Amazon EVS estiver concluída.
+O NetApp Workload Factory agora oferece suporte à implantação e montagem automáticas do seu sistema de arquivos Amazon FSx for NetApp ONTAP .  Isso permite que você comece a implantar suas VMs no FSx para sistemas de arquivos ONTAP quando a migração para o ambiente Amazon EVS estiver concluída.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Crie um plano de implantação para o Amazon EVS usando o consultor de migração"]
 
@@ -59,7 +67,7 @@ https://docs.netapp.com/us-en/workload-vmware/calculate-evs-savings.html["Explor
 
 === Apresentando o suporte do consultor de migração para o Amazon Elastic VMWare Service
 
-O BlueXP Workload Factory para VMware agora oferece suporte ao Amazon Elastic VMware Service.  Você pode migrar rapidamente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service usando o consultor de migração, otimizando custos e permitindo mais controle sobre seu ambiente VMware sem precisar refatorar ou reestruturar seus aplicativos.
+O BlueXP Workload Factory para VMware agora oferece suporte ao Amazon Elastic VMware Service. Você pode migrar manualmente suas cargas de trabalho VMware locais para o Amazon Elastic VMware Service, otimizando custos e permitindo mais controle sobre seu ambiente VMware sem precisar refatorar ou reestruturar seus aplicativos.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Crie um plano de implantação para o Amazon EVS usando o consultor de migração"]
 
